theme/standardtotararesponsive/style/core.css
/* ... */
#profileoptions li {
    padding-left: 0;
    padding-right: 0;
    background-color: transparent;
    display: inline;
    margin-right:0;
    font-size: 85%;
    font-weight:normal;
    text-decoration: none;
    list-style-type:none;
}
/**
 * General
 */
hr {
    display: block;
    color:#DDD;
    background: #DDD;
    position: relative;
    padding: 0;
    margin: 8px auto;
    width: 100%;
    clear: both;
    border: none;
    border-top: 1px solid #BFBFBF;
    border-bottom: 1px solid #FFFFFF;
    font-size: 1px;
    line-height: 0;
    overflow: visible;
}
.helplink img {
    vertical-align: text-top;
}
.arrow {
    font-size: 0.85em;
}
.calendartable a {
    color:#087BB1;
}
/**
 * Fieldset class with borders shown by default
 */
fieldset.surround,
.mform fieldset.surround {
    border-radius: 6px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border: 1px solid #000000;
    padding: 5px;
}
fieldset.surround legend,
.mform fieldset.surround legend {
    font-weight:bold;
    font-size:16px;
    padding: 0px 5px;
    border: none;
    width: auto;
    margin: 0;
}

/**
 * Course layout fixes
 */
.coursebox .info {
    position: relative;
}
.coursebox .info h3.name {
    margin-right: 25px;
}
.coursebox .info .enrolmenticons {
    position: absolute;
    right: 0;
}
.coursebox .content .summary {
    float: none;
    width: auto;
}

/**
 * Moodle Forms
 */
input,
textarea,
select {
    margin: 5px 5px 5px 0;
}
.ie7 input[type="radio"] {
    margin: 0;
}
.mform .btn-cancel {
    text-decoration: none;
}
.mform .btn-cancel:hover,
.mform .btn-cancel:focus {
    text-decoration: none;
}

/**
 * Buttons and button-like links
 * see also css3.css
 */
button,
input.submit,
input[type="submit"],
input[type="button"],
input[type="reset"],
#id_buttonfield,
a.link-as-button {
    color: #FFF;
    padding: 0.3em 0.6em;
    border:1px solid #ccc;
}
.yui-skin-sam .yui-button button,
.yui-skin-sam .yui-button-hover button,
.yui-skin-sam .yui-dialog .ft span.default button {
    color:#6b6b6b;
}
body.ie7 button,
body.ie7 input.submit,
body.ie7 input[type="submit"],
body.ie7 input[type="button"],
body.ie7 input[type="reset"],
body.ie7 #id_buttonfield,
body.ie7 a.link-as-button {
    padding: 0 0.2em;
}
button:hover,
input.submit:hover,
input[type="submit"]:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
#id_buttonfield:hover,
a.link-as-button:hover {
    cursor: pointer;
    color: #FFFFFF;
    text-decoration: none;
}
input[type="text"],
input[type="password"],
textarea,
select {
    padding:2px;
    margin:2px 2px 0;
    color: #4b4b4b;
}
input.form-submit:hover,
input#id_submitbutton:hover,
input#id_submitbutton2:hover,
.path-admin .buttons input[type="submit"]:hover,
td.submit input:hover,
input.form-submit:focus,
input#id_submitbutton:focus,
input#id_submitbutton2:focus,
.path-admin .buttons input[type="submit"]:focus,
td.submit input:focus,
input.form-submit:active,
input#id_submitbutton:active,
input#id_submitbutton2:active,
.path-admin
.buttons input[type="submit"]:active,
td.submit input:active,
input.form-submit.active,
input#id_submitbutton.active,
input#id_submitbutton2.active,
.path-admin .buttons input[type="submit"].active,
td.submit input.active,
input.form-submit.disabled,
input#id_submitbutton.disabled,
input#id_submitbutton2.disabled,
.path-admin .buttons input[type="submit"].disabled,
td.submit input.disabled,
input.form-submit[disabled],
input#id_submitbutton[disabled],
input#id_submitbutton2[disabled],
.path-admin .buttons input[type="submit"][disabled],
td.submit input[disabled] {
    color: #333333;
    background-color: inherit;
}
input[type="checkbox"] {
    margin: 0 5px 0 0;
}
.dir-rtl input[type="checkbox"],
.dir-rtl input[type="radio "] {
    margin: 0 0 0 5px;
}
.mform fieldset {
    padding:10px 0 10px;
    border:none;
}
.mform fieldset legend {
    width:100%;
    color:#333333;
    padding-bottom:3px;
    border-bottom:1px solid #BFBFBF;
    margin-left: 0;
}
.mform fieldset div {
    margin:5px 0;
}
.mform .required,
.mform .fdescription.required {
    color:#6b6b6b;
}
.mform .fdescription.required {
    text-align: right;
    margin-left: 0;
}
.mform .fitem {
    padding-bottom:5px;
    margin-bottom:5px;
    border:none;
}
.mform .fitem div.fitemtitle {
    text-align:left;
    font-weight:bold;
    width:22%;
    margin-top:2px;
}
.dir-rtl .mform .fitem .fitemtitle {
    text-align: right;
}
.mform .fitem .felement {
    width: 74%;
    float: right;
    margin-left: 0 !important;
}
.dir-rtl .mform .fitem .felement {
    float: left;
    margin-right: 0 !important;
}
.mform .fitem fieldset {
    padding: 0 !important;
}
.mform .fitem .feditor {
    clear: none;
    margin:0;
    padding:10px 0;
    min-width: 425px;
}
.mform .fitem .feditor textarea {
    width:98% !important;
}
.mform .fitem .feditor table.mceLayout {
    width:100% !important;
}
.mform .ftextarea textarea {
    width: 95%;
    max-width: 600px;
}
#fgroup_id_buttonar {
  margin: 5px 0;
  padding: 0 0 5px;
  background: none;
  border: none;
}

@media screen and (max-width: 979px) {
    .mform .fitem div.fitemtitle,
    .mform .fitem .felement {
        float: none;
        width: 100%;
        text-align: left;
    }

    .dir-rtl .mform .fitem div.fitemtitle,
    .dir-rtl .mform .fitem .felement {
        text-align: right;
    }

    .visibleto {
        position: static;
        display: block;
    }
}
/**
 * Help
 */

#helppopupbox {
    background:#F5F5F5;
}
#helppopupbox .helpheading {
    font-size:1.5em;
    color:#333333;
}
/**
 * Overriding base
 */
.pagelayout-frontpage #page-header {
    margin:0 0;
    width:100%;
    border-bottom: 0;
}
.navbar .breadcrumb {
    font-weight: normal;
    font-size: .9em;
    margin-top:2px;
    margin-left: 7px;
}
.navbar .breadcrumb ul {
    color: #666;
}
.navbar .navbutton {
    margin-top:-2px;
}
/**
 * Moodle Tabs
 */

.tabtree {
  position: relative;
}

.tabtree .tabrow0 {
  margin: 0;
}
/* ... */

